# logsink

./: Cargo.toml
src/: errors.rs  main.rs  paths.rs
src/formats/: mod.rs  text.rs
src/receivers/: fifo.rs  mod.rs  ndjson.rs  suite.rs
src/schema/: level.rs  message.rs  mod.rs
