[package]
name = "logsink"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "^1.40", features = ["full"] }
bytes = "^1.7"

strum = { version = "0.26", features = ["derive"] }
parse-display = "0.10"

chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "^1.10", features = ["serde"] }

serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
rmp-serde = "^1.3"
