[package]
name = "logsink"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "^1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = { version = "0.1" }
bytes = "^1.7"

thiserror = "^1.0"
strum = { version = "0.26", features = ["derive"] }
parse-display = "0.10"

chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "^1.10", features = ["serde"] }

serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
rmp-serde = "^1.3"

clap = { version = "^4.5", features = ["derive"] }

[target.unix.dependencies]
nix = { version = "0.29", features = ["fs"] }
